--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -9,7 +9,5 @@ jobs:
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.17.2
         env:
-          # Target branch
           PAGES_BRANCH: gh-pages
-          # Or if publishing to the same repo, use the automatic token
-          #TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
